--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="subheading mb-5">
                         2/926b2 bharathidasan street,Gandhi nagar,Batlagundu-624202 .
                     </div>
-                    <center><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/myimage1.jpg" alt="" width="200">
+                    <center><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/myimage2.jpg.png" alt="" width="200">
                     <br><br>
                     <h3>CONTACT ME ON</h3>
                     <br>
